--- a/BeamWallet/ViewControllers/Main/UTXO/Cells/UTXOCell.xib
+++ b/BeamWallet/ViewControllers/Main/UTXO/Cells/UTXOCell.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SF-Pro-Display-Bold.otf">
+            <string>SFProDisplay-Bold</string>
+        </array>
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
         </array>
         <array key="SF-Pro-Display-RegularItalic.otf">
             <string>SFProDisplay-Italic</string>
-        </array>
-        <array key="SFProText-Medium.ttf">
-            <string>SFProText-Medium</string>
         </array>
     </customFonts>
     <objects>
@@ -38,29 +38,29 @@
                                     <constraint firstAttribute="height" constant="13" id="kVc-fY-NWR"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o0K-uh-h6D">
-                                <rect key="frame" x="15" y="15" width="44" height="29"/>
+                            <view contentMode="scaleToFill" horizontalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="o0K-uh-h6D">
+                                <rect key="frame" x="55" y="15" width="170" height="29"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Mgw-Jq-kgv">
-                                        <rect key="frame" x="0.0" y="0.0" width="44" height="29"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgw-Jq-kgv">
+                                        <rect key="frame" x="0.0" y="0.0" width="170" height="29"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="iGR-XD-Dr5"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="20"/>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Mgw-Jq-kgv" secondAttribute="trailing" id="Ymk-Rn-TBx"/>
                                     <constraint firstAttribute="bottom" secondItem="Mgw-Jq-kgv" secondAttribute="bottom" id="haC-hC-7hK"/>
                                     <constraint firstItem="Mgw-Jq-kgv" firstAttribute="leading" secondItem="o0K-uh-h6D" secondAttribute="leading" id="vlF-HZ-4UP"/>
                                     <constraint firstItem="Mgw-Jq-kgv" firstAttribute="top" secondItem="o0K-uh-h6D" secondAttribute="top" id="xq9-gy-yqG"/>
-                                    <constraint firstAttribute="trailing" secondItem="Mgw-Jq-kgv" secondAttribute="trailing" id="yyK-Ti-4jL"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 May" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCD-Zk-wOD">
-                                <rect key="frame" x="58.5" y="44" width="45" height="17"/>
+                                <rect key="frame" x="98.5" y="44" width="45" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="xjB-Mv-Kfc"/>
                                 </constraints>
@@ -72,7 +72,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w6-bX-Gdm">
-                                <rect key="frame" x="15" y="44" width="33.5" height="17"/>
+                                <rect key="frame" x="55" y="44" width="33.5" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="I0s-qs-b2k"/>
                                 </constraints>
@@ -83,30 +83,41 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8L-87-HPS">
-                                <rect key="frame" x="246" y="30.5" width="36" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O8L-87-HPS">
+                                <rect key="frame" x="249" y="30.5" width="33" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="SsW-Qa-Bfq"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dGx-HM-Fc8" customClass="AssetIconView" customModule="BeamWallet" customModuleProvider="target">
+                                <rect key="frame" x="13" y="16.5" width="26" height="26"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="26" id="TCi-ZI-Nch"/>
+                                    <constraint firstAttribute="height" constant="26" id="WxD-Wp-aLO"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="dGx-HM-Fc8" firstAttribute="leading" secondItem="Ndh-8Z-dyd" secondAttribute="leading" constant="13" id="1Fn-T9-iHn"/>
                             <constraint firstAttribute="bottom" secondItem="1w6-bX-Gdm" secondAttribute="bottom" constant="16.5" id="7PY-p5-0eQ"/>
                             <constraint firstItem="BGd-Ym-U2n" firstAttribute="centerY" secondItem="Ndh-8Z-dyd" secondAttribute="centerY" id="A8m-xk-XFQ"/>
                             <constraint firstAttribute="trailing" secondItem="BGd-Ym-U2n" secondAttribute="trailing" constant="15" id="AWa-U2-wZ4"/>
                             <constraint firstAttribute="bottom" secondItem="KCD-Zk-wOD" secondAttribute="bottom" constant="16.5" id="LPQ-ri-g0g"/>
                             <constraint firstItem="BGd-Ym-U2n" firstAttribute="leading" secondItem="O8L-87-HPS" secondAttribute="trailing" constant="15" id="O8P-wr-4ha"/>
                             <constraint firstItem="O8L-87-HPS" firstAttribute="centerY" secondItem="Ndh-8Z-dyd" secondAttribute="centerY" id="UP5-XS-GpH"/>
-                            <constraint firstItem="1w6-bX-Gdm" firstAttribute="leading" secondItem="Ndh-8Z-dyd" secondAttribute="leading" constant="15" id="g0b-r4-umD"/>
+                            <constraint firstAttribute="trailing" secondItem="o0K-uh-h6D" secondAttribute="trailing" constant="95" id="cNp-Vi-7Yk"/>
+                            <constraint firstItem="1w6-bX-Gdm" firstAttribute="leading" secondItem="Ndh-8Z-dyd" secondAttribute="leading" constant="55" id="g0b-r4-umD"/>
+                            <constraint firstItem="dGx-HM-Fc8" firstAttribute="centerY" secondItem="o0K-uh-h6D" secondAttribute="centerY" id="ieH-Uh-VP4"/>
                             <constraint firstItem="1w6-bX-Gdm" firstAttribute="top" secondItem="o0K-uh-h6D" secondAttribute="bottom" id="k1o-0D-x6c"/>
-                            <constraint firstItem="o0K-uh-h6D" firstAttribute="leading" secondItem="Ndh-8Z-dyd" secondAttribute="leading" constant="15" id="nRu-6k-Q5V"/>
+                            <constraint firstItem="o0K-uh-h6D" firstAttribute="leading" secondItem="Ndh-8Z-dyd" secondAttribute="leading" constant="55" id="nRu-6k-Q5V"/>
                             <constraint firstItem="KCD-Zk-wOD" firstAttribute="leading" secondItem="1w6-bX-Gdm" secondAttribute="trailing" constant="10" id="pJZ-cr-eEr"/>
                             <constraint firstItem="o0K-uh-h6D" firstAttribute="top" secondItem="Ndh-8Z-dyd" secondAttribute="top" constant="15" id="uvf-eu-bfx"/>
                         </constraints>
@@ -125,12 +136,13 @@
             <connections>
                 <outlet property="amountLabel" destination="Mgw-Jq-kgv" id="JL8-hE-rmU"/>
                 <outlet property="amountView" destination="o0K-uh-h6D" id="O1W-5y-ulo"/>
+                <outlet property="assetIconView" destination="dGx-HM-Fc8" id="qYl-5T-SVl"/>
                 <outlet property="dateLabel" destination="KCD-Zk-wOD" id="izu-iy-HGo"/>
                 <outlet property="mainView" destination="Ndh-8Z-dyd" id="mng-gz-oJZ"/>
                 <outlet property="statusLabel" destination="1w6-bX-Gdm" id="dDu-vX-S9S"/>
                 <outlet property="typeLabel" destination="O8L-87-HPS" id="vlf-wx-TiL"/>
             </connections>
-            <point key="canvasLocation" x="52.799999999999997" y="87.706146926536732"/>
+            <point key="canvasLocation" x="52.799999999999997" y="87.256371814092958"/>
         </tableViewCell>
     </objects>
     <resources>
