--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionUTXOCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionUTXOCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,14 +19,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="33G-Y3-6aG" id="juG-S8-mFQ">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uYC-QI-Okv">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DxF-up-dIn">
-                                <rect key="frame" x="41" y="12" width="8" height="17"/>
+                                <rect key="frame" x="41" y="12" width="264" height="17.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -48,6 +46,7 @@
                         <constraints>
                             <constraint firstItem="vlh-wG-YpY" firstAttribute="leading" secondItem="uYC-QI-Okv" secondAttribute="leading" constant="15" id="1dB-jN-POn"/>
                             <constraint firstItem="vlh-wG-YpY" firstAttribute="centerY" secondItem="uYC-QI-Okv" secondAttribute="centerY" id="3Mh-x3-qdo"/>
+                            <constraint firstAttribute="trailing" secondItem="DxF-up-dIn" secondAttribute="trailing" constant="15" id="Adp-eu-R87"/>
                             <constraint firstAttribute="bottom" secondItem="DxF-up-dIn" secondAttribute="bottom" constant="10.5" id="FJC-3z-ddx"/>
                             <constraint firstItem="DxF-up-dIn" firstAttribute="top" secondItem="uYC-QI-Okv" secondAttribute="top" constant="12" id="pjF-ma-hSd"/>
                             <constraint firstItem="DxF-up-dIn" firstAttribute="leading" secondItem="vlh-wG-YpY" secondAttribute="trailing" constant="10" id="zqR-Aa-tDg"/>
